v3.8.0 (XXXX-XX-XX)
-------------------

* Updated ArangoDB Starter to 0.15.0.

* Fix BTS-357: Fix processing of analyzer with return type by TOKENS function.

* Added error handling for figures command in cluster. Previously errors
  returned by shards were ignored when aggregating the individual responses.

* Remove CMake control variable `UNCONDITIONALLY_BUILD_LOG_MESSAGES`.

* Fix undefined behavior in dynarray constructor when running into 
  an out-of-memory exception during construction. In arangod, this can only
  happen during metrics objects construction at program start.

* Added option `--headers-file` to arangoimport, to optionally read CSV/TSV
  headers from a separate file.

* Fixed issue BTS-353: memleak when running into an out-of-memory situation
  while repurposing an existing AqlItemBlock.

* Change metrics' internal `low()` and `high()` methods so that they  return by
  value, not by reference.

* Fix logging of urls when using `--log.level requests=debug`. There was an
  issue since v3.7.7 with the wrong URL being logged in request logging if
  multiple requests were sent over the same connection. In this case, the
  request logging only reported the first URL requested in the connection, even
  for all subsequent requests.

* Added startup option `--query.allow-collections-in-expressions` to control
  whether collection names can be used in arbitrary places in AQL expressions,
  e.g. `collection + 1`. This was allowed before, as a collection can be seen as
  an array of documents. However, referring to a collection like this in a query
  would materialize all the collection's documents in RAM, making such
  constructs prohibitively expensive for medium-size to large-size collections.

  The option can now be set to `false` to prohibit accidental usage of
  collection names in AQL expressions. With that setting, using a collection
  inside an arbitrary expression will trigger the error `collection used as